--- a/xpi/locale/tr/options.dtd
+++ b/xpi/locale/tr/options.dtd
@@ -6,10 +6,10 @@
 <!ENTITY Ctr_space			"Boşluk">
 <!ENTITY Ctr_separator		"Ayraç">
 <!ENTITY Ctr_puibseparator	"Panel arayüzü ayraç butonu">
-<!ENTITY Ctr_navthrobber	"Activity Indicator">
+<!ENTITY Ctr_navthrobber	"Etkinlik Göstergesi">
 <!ENTITY Ctr_sidebarbutton	"(Kenar Çubuğu)">
-<!ENTITY Ctr_windowcontrols	"Min/max/close (Fullscreen)">
-<!ENTITY Ctr_rr				"Restart required!">
+<!ENTITY Ctr_windowcontrols	"Min/max/kapat (Tam ekran)">
+<!ENTITY Ctr_rr				"Yeniden başlatma gerekli!">
 
 <!ENTITY Ctr_cuibuttons		"Butonlar">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -35,22 +35,22 @@
 <!ENTITY Ctr_tabsontop1		"Sekmeler Tepede (varsayılan) - [ayarlanmamış]">
 <!ENTITY Ctr_tabsontop2		"Sekmeler Tepede - ayarla [tabsontop=true]">
 <!ENTITY Ctr_tabsontop3		"Sekmeler Tepede Değil - ayarla [tabsontop=false]">
-<!ENTITY Ctr_tabsontopW1	"v2 is for some add-ons and complete themes only!">
+<!ENTITY Ctr_tabsontopW1	"v2 sadece bazı eklentiler ve tam temalar içindir!">
 <!ENTITY Ctr_tabsontopI1	"Öznitelik Ekler [tabsontop=true/false] to">
 <!ENTITY Ctr_tabsintitlebar	"Firefox başlık çubuğu (about:config)">
 <!ENTITY Ctr_tabwidthdef	"(varsayılan)">
 <!ENTITY Ctr_tabwidthcla	"(klasik)">
-<!ENTITY Ctr_tabminheight	"Height:">
+<!ENTITY Ctr_tabminheight	"Yükseklik:">
 <!ENTITY Ctr_tabheightinfo	"Low values will cause glitches in maximized mode!">
 <!ENTITY Ctr_tabmaxwidth	"Max-genişlik:">
 <!ENTITY Ctr_tabminwidth	"Min-genişlik:">
 <!ENTITY Ctr_tabwidthinfo	"Tab width is controlled by TabMixPlus">
-<!ENTITY Ctr_tabwidthinfo2	"Tab width is controlled by TabUtilities">
-<!ENTITY Ctr_tabwidthinfo3	"Values below 48px will cause glitches in most cases!">
+<!ENTITY Ctr_tabwidthinfo2	"Sekme genişlikleri TabUtilities tarafından kontrol ediliyor">
+<!ENTITY Ctr_tabwidthinfo3	"48px altındaki değerler bazı hatalara sebep olabilir!">
 <!ENTITY Ctr_tabinsertion	"Insert related tab after current tab (about:config preference)">
-<!ENTITY Ctr_emptyfavicon	"Restore empty favicon (if a site does not offer one)">
-<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
-<!ENTITY Ctr_e10stab_notd	"E10s tabs: remove underline">
+<!ENTITY Ctr_emptyfavicon	"Boş faviconu yükle (sitenin faviconu yoksa eğer)">
+<!ENTITY Ctr_noemptypticon	"Tutturulmuş sekmelerde boş faviconu kaldır">
+<!ENTITY Ctr_e10stab_notd	"E10s sekmeler: altçizgiyi kaldır">
 <!ENTITY Ctr_closetab_0		"Sekme Kapat">
 <!ENTITY Ctr_closetab_1		"Sadece aktif sekme için">
 <!ENTITY Ctr_closetab_2		"Hiçbir yerde">
@@ -85,32 +85,32 @@
 <!ENTITY Ctr_appbuttonI1e	"Windows başlık çubuğunda görünür değil!">
 <!ENTITY Ctr_appbuttonI2	"Sadece buton renkleri görünür">
 <!ENTITY Ctr_alttbappb		"Alternatif ikonlar!">
-<!ENTITY Ctr_appbutmhi		"Higher position (if on tabs toolbar)">
+<!ENTITY Ctr_appbutmhi		"Daha yüksek pozisyon (eğer sekmeler araç çubuğu üstünde ise)">
 <!ENTITY Ctr_appbutbdl		"Sınırları ve arka plan renklerini gizle">
 <!ENTITY Ctr_dblclclosefx	"Çift tıklama mevcut pencereyi kapatır">
-<!ENTITY Ctr_appbclmmenus	"Clickable menus inside button menu (New Tab, Print...)">
-<!ENTITY Ctr_appbutonclab	"Title">
-<!ENTITY Ctr_appbutonclab2	"Add title or leave empty">
+<!ENTITY Ctr_appbclmmenus	"Sekmelerde tıklanabiir menüler(Yeni sekme, Yazdır...)">
+<!ENTITY Ctr_appbutonclab	"Başlık">
+<!ENTITY Ctr_appbutonclab2	"Başlık ekle ve ya boş bırak">
 
 <!ENTITY Ctr_ui				"Genel Arayüz">
 <!ENTITY Ctr_nbiconsize0	"Gezinti çubuğu niteliklerini ayarla:">
 <!ENTITY Ctr_smallnavbut	"Gezinti çubuğunda küçük butonlar">
 <!ENTITY Ctr_bfurlbarfix	"URL çubuğu çapını ve sınırlarını düzelt">
 <!ENTITY Ctr_backforward	"Hareketli İleri-Geri butonları">
-<!ENTITY Ctr_nbcompact		"Reduce navigation toolbars height">
+<!ENTITY Ctr_nbcompact		"Gezinti araç çubuğu yüksekliğini azalt">
 <!ENTITY Ctr_hide_bf_popup	"Geçmiş menüsü butonunu gizlemek için Fare tuşuna basın">
-<!ENTITY Ctr_bf_space		"Reduce space between buttons (if possible)">
-<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
-<!ENTITY Ctr_svgfilters		"SVG colors for default toolbar button icons">
+<!ENTITY Ctr_bf_space		"Düğmeleri arası boşluğu azaltın (mümkünse)">
+<!ENTITY Ctr_noconicons		"Etiketlerle sayfa içerik menüsü simgelerini değiştirin (geri, ileri, dur, yenile, yerimleri sayfaıs)">
+<!ENTITY Ctr_svgfilters		"Araç çubuğu düğmeleri için SVG renkleri kullan">
 <!ENTITY Ctr_wincontrols	"Hareketli tam ekran penceresi kontrolleri">
-<!ENTITY Ctr_emptyfavicon2	"Replace generic favicon (empty and dotted) with sheet favicon">
-<!ENTITY Ctr_mstatusbar		"Movable status-bar panel">
-<!ENTITY Ctr_mstatusbars4e	"Status-bar panel is controlled by 'Status-4-Evar'">
-<!ENTITY Ctr_mstatusbartpp	"Status-bar panel is controlled by 'ThePuzzlePiece'">
-<!ENTITY Ctr_mstatusbarpzt	"Status-bar panel is controlled by 'Puzzle Toolbars'">
-<!ENTITY Ctr_mstatusbarabr	"Status-bar panel is controlled by 'The Addon Bar (Restored)'">
+<!ENTITY Ctr_emptyfavicon2	"Genel(boş noktalı) faviconu kağıt görünümlü favicon ile değiştir">
+<!ENTITY Ctr_mstatusbar		"Hareketli durum çubuğu paneli">
+<!ENTITY Ctr_mstatusbars4e	"Durum çubuğu paneli 'Status-4-Evar' tarafından kontrol edilir">
+<!ENTITY Ctr_mstatusbartpp	"Durum çubuğu paneli 'ThePuzzlePiece' tarafından kontrol edilir">
+<!ENTITY Ctr_mstatusbarpzt	"Durum çubuğu paneli 'Puzzle Toolbars' tarafından kontrol edilir">
+<!ENTITY Ctr_mstatusbarabr	"Durum çubuğu paneli 'The Addon Bar (Restored)' tarafından kontrol edilir">
 <!ENTITY Ctr_combrelstop	"Dur &amp; yenile butonlarını birleştir">
-<!ENTITY Ctr_stoprel1		"Important: place reload button after stop button!">
+<!ENTITY Ctr_stoprel1		"Önemli: yenile butonunu dur butonundan sonra yerleştir!">
 <!ENTITY Ctr_panelmenucol	"Panel menu: alternatif arka plan rengi">
 <!ENTITY Ctr_hideprivmask	"Gizli gezinme: maske göstergesini gizle">
 <!ENTITY Ctr_nbisizedelay	"ms delay in execution (1000 ms = 1 sec)">
@@ -123,11 +123,11 @@
 <!ENTITY Ctr_nav_txt_ico1	"Geniş butonlar göster">
 <!ENTITY Ctr_nav_txt_ico2	"Buton ve yazı göster">
 <!ENTITY Ctr_nav_txt_ico3	"Sadece yazıyı göster">
-<!ENTITY Ctr_nav_txt_exp	"Experimental attributes:">
-<!ENTITY Ctr_iat_notf_vt	"Not for vertical toolbars">
+<!ENTITY Ctr_nav_txt_exp	"Deneysel özellikler:">
+<!ENTITY Ctr_iat_notf_vt	"Değil dikey araç çubukları için değil">
 <!ENTITY Ctr_cpanelmenus	"Panel menu: tümleşik görünüm (yerimleri, geçmiş vb.)">
 <!ENTITY Ctr_hidezoomres	"Araç çubuğunda zoom kontrolü: zoom-reset butonu gizle">
-<!ENTITY Ctr_alt_newtabp	"New tab page: alternative appearance">
+<!ENTITY Ctr_alt_newtabp	"Yeni sekme sayfası: alternatif görünüm">
 <!ENTITY Ctr_noresizerxp	"Hide Resizer (Windows XP)">
 <!ENTITY Ctr_pmhidelabels	"Panel menu uyarısı: buton etikeitini gizle">
 <!ENTITY Ctr_menupopupscr	"Menu uyarısı: kaydırma okları yerine kaydırma çubuklarını göster">
@@ -135,11 +135,11 @@
 <!ENTITY Ctr_fxmockup		"Firefox Taklit Modeli">
 <!ENTITY Ctr_tabmokcolor	"Sekme butonları için beyaz renk (kapat, yeni, gruplar, tümünü listele)">
 <!ENTITY Ctr_tabmokcolor2	"Yazılar ve aktif olmayan sekmeler için beyaz renk ve karanlık gölge">
-<!ENTITY Ctr_tabmokcolor3	"White color for tab separators">
-<!ENTITY Ctr_tabmokcolor4	"White color for empty dotted tab favicon">
+<!ENTITY Ctr_tabmokcolor3	"Sekme ayırıcıları için Beyaz renk kullan">
+<!ENTITY Ctr_tabmokcolor4	"Boş-noktalı sekme faviconu için Beyaz renk kullan">
 
-<!ENTITY Ctr_navthrobber1	"Clicking activity indicator opens specified url:">
-<!ENTITY Ctr_navthrobber2	"Add url or leave empty">
+<!ENTITY Ctr_navthrobber1	"Etkinlik göstergesine tıklamak beliritilen bağlantıyı açar:">
+<!ENTITY Ctr_navthrobber2	"Bağlantı ekle ve ya boş bırakın:">
 
 <!ENTITY Ctr_tab_tf_info1	"Renk isimleri, hexcodes, rgb(a) ve hsl(a) değerleri desteklenir.">
 <!ENTITY Ctr_tab_tf_info2	"Girişler doğrulanamayacak!">
@@ -162,39 +162,39 @@
 <!ENTITY Ctr_bold			"Kalın">
 <!ENTITY Ctr_italic			"İtalik">
 <!ENTITY Ctr_notabhov		"Enabled settings override 'hovered' settings">
-<!ENTITY Ctr_tabc_act_tb	"Background color on toolbars">
+<!ENTITY Ctr_tabc_act_tb	"Araç çubukları üzerinde arka plan rengi">
 
-<!ENTITY Ctr_urlbar			"Location bar">
-<!ENTITY Ctr_starinurl		"Star-button">
-<!ENTITY Ctr_feedinurl		"RSS feed-button">
-<!ENTITY Ctr_hideurelstop	"Hide 'stop &amp; reload' buttons">
+<!ENTITY Ctr_urlbar			"Yer çubuğu">
+<!ENTITY Ctr_starinurl		"Yıldız-butonu">
+<!ENTITY Ctr_feedinurl		"RSS feed-butonu">
+<!ENTITY Ctr_hideurelstop	"'Dur &amp; YEnile' butonlarını gizle">
 <!ENTITY Ctr_urlbardropm	"Move dropmarker to location bars end">
-<!ENTITY Ctr_hideprbutton	"Hide notification icon when a popup gets blocked">
-<!ENTITY Ctr_urlbar_ib		"Site Identity Button (identity box)">
-<!ENTITY Ctr_verifiedcolors	"Green/blue button colors for verified websites and secure connections">
-<!ENTITY Ctr_faviconurl		"Favicon: current websites icon">
-<!ENTITY Ctr_padlock_hid	"Padlock icon for secure connections (hidden)">
-<!ENTITY Ctr_padlock_def	"Padlock icon for secure connections (default)">
-<!ENTITY Ctr_padlock_cla	"Padlock icon for secure connections (classic)">
-<!ENTITY Ctr_padlock_mod	"Padlock icon for secure connections (modern)">
-<!ENTITY Ctr_padlock_ext	"Security icons">
-<!ENTITY Ctr_icopageinfo	"Clicking on icon opens 'page info' window">
+<!ENTITY Ctr_hideprbutton	"Popup engellendiğinde beliren uyarıyı gizle">
+<!ENTITY Ctr_urlbar_ib		"Site Kimlik Düğmesi (identity box)">
+<!ENTITY Ctr_verifiedcolors	"Doğrulanmış web siteleri ve güvenli bağlantılar için yeşil/mavi düğme renkleri">
+<!ENTITY Ctr_faviconurl		"Favicon: Mevcut web siteleri simgesidir">
+<!ENTITY Ctr_padlock_hid	"Güvenli bağlantılar için asma kilit simgesi (gizli)">
+<!ENTITY Ctr_padlock_def	"Güvenli bağlantılar için asma kilit simgesi (varsayılan)">
+<!ENTITY Ctr_padlock_cla	"Güvenli bağlantılar için asma kilit simgesi (klasik)">
+<!ENTITY Ctr_padlock_mod	"Güvenli bağlantılar için asma kilit simgesi (modern)">
+<!ENTITY Ctr_padlock_ext	"Güvenlik ikonları">
+<!ENTITY Ctr_icopageinfo	"İkonlara tıklamak 'sayfa bilgisi' görüntüler">
 
-<!ENTITY Ctr_menubar_items	"Menu items position">
-<!ENTITY Ctr_extrabar		"Additional Toolbars">
-<!ENTITY Ctr_extrabar0		"Additional Toolbar(s)">
-<!ENTITY Ctr_extrabar1		"Additional Toolbar">
-<!ENTITY Ctr_extrabarinfo	"Switching between 'tabs on top' and 'tabs not on top' modes randomly alters additional toolbars order. Firefox has to be restarted to solve this issue.">
+<!ENTITY Ctr_menubar_items	"Menu öge pozisyonu">
+<!ENTITY Ctr_extrabar		"Ek Araç Çubuğu">
+<!ENTITY Ctr_extrabar0		"Ek Araç Çubuk(ları)">
+<!ENTITY Ctr_extrabar1		"Ek Araç Çubuğu">
+<!ENTITY Ctr_extrabarinfo	"'Sekmeler yukarıda' ve 'Sekmeler yukarıda olmadığı' modlar arası değişmek, bazen araç çubuklarını bozabilir. Firefox bu sorunu çözmek için yeniden başlatılması gerekir.">
 
 <!ENTITY Ctr_invicons		"Ters çevrilmiş simgeleri">
 <!ENTITY Ctr_menubar		"Menu çubuğu">
 <!ENTITY Ctr_tabstoolbar	"Sekme araç çubuğu">
 <!ENTITY Ctr_navbar			"Gezinti araç çubuğu">
 <!ENTITY Ctr_bookbar		"Yerimi araç çubuğu">
-<!ENTITY Ctr_notoolbar		"Hidden (do not show menu items)">
+<!ENTITY Ctr_notoolbar		"Gizli (menü ögelerini gösterme)">
 
-<!ENTITY Ctr_mbarforceleft	"First element">
-<!ENTITY Ctr_mbarforceright	"Last element">
+<!ENTITY Ctr_mbarforceleft	"İlk öge">
+<!ENTITY Ctr_mbarforceright	"Son öge">
 
 <!ENTITY Ctr_toolbars		"Araç çubuğu ayarları">
 <!ENTITY Ctr_dblclnewtab	"Çift tıklama 'yeni' sekme açar (using browser.newtab.url)">
@@ -218,8 +218,8 @@
 <!ENTITY Ctr_nonavbarbg2	"All toolbars in 'The Fox, Only Better' add-on's Slim Chrome are affected.">
 <!ENTITY Ctr_nonavborder	"Yerimi araç çubuğu: Araç çubuğuna üst sınır ekle">
 <!ENTITY Ctr_nonavtbborder	"Tepedeki sekmeler: Araç çubuğu sınırları kaldır">
-<!ENTITY Ctr_hidesbclose	"Sidebars: hide sidebar close button">
-<!ENTITY Ctr_chevronfix		"Navigation toolbar: hide double arrow ('chevron') at toolbars end">
+<!ENTITY Ctr_hidesbclose	"Sidebars: Kenar çubuğu kapatma düğmesini gizle">
+<!ENTITY Ctr_chevronfix		"Gezinti araç çubuğu: Araç çubuğu sonunda ki Çift oku gizle ('chevron')">
 
 <!ENTITY Ctr_closeabarbut	"Eklenti çubuğu kapatma düğmesini sakla">
 <!ENTITY Ctr_highaddonsbar	"Yüksekliği Artır">
@@ -235,14 +235,14 @@
 <!ENTITY Ctr_toolsitem		"Araçlar menüsünde menü ögeleri">
 <!ENTITY Ctr_appmenuitem	"Appbuttons menüsünde menü ögeleri">
 <!ENTITY Ctr_contextitem	"Araç çubuğu bağlam menüsünde menü ögeleri">
-<!ENTITY Ctr_puictrbutton	"Button in main panel menu">
+<!ENTITY Ctr_puictrbutton	"Ana paneli menüsünde düğme">
 
-<!ENTITY Ctr_otherctroptns	"Other settings">
-<!ENTITY Ctr_cuibotbuttons	"Extra buttons in 'customizing' mode">
-<!ENTITY Ctr_bookmarkoinpw	"'Open in a new private window' entry in bookmarks context menu">
+<!ENTITY Ctr_otherctroptns	"Diğer ayarlar">
+<!ENTITY Ctr_cuibotbuttons	"'Özelleştirme' modunda ekstra butonlar">
+<!ENTITY Ctr_bookmarkoinpw	"'Yeni gizli pencere aç' yerimleri bağlam menüsünde bir girdi">
 <!ENTITY Ctr_nodevtheme		"Prevent 'Developer Theme' from being enabled">
 
-<!ENTITY Ctr_experttweaks	"Advanced">
+<!ENTITY Ctr_experttweaks	"Gelişmiş">
 <!ENTITY Ctr_fx33layers		"Firefox 33+ introduced 'new render features' currently responsible for 'hanging tabs' on some systems. Unchecking this preference resolves this issue.">
 <!ENTITY Ctr_fx34search		"Firefox 34+ introduced a 'new seach ui'. Unchecking this preference returns the 'old seach ui'.">
 <!ENTITY Ctr_fx34loop		"Firefox 34+ introduced 'calling and conversation' features. Unchecking this preference removes them.">
@@ -252,7 +252,7 @@
 
 <!ENTITY Ctr_pw_settings	"Ayarlar">
 <!ENTITY Ctr_pw_set_reset	"Sıfırla">
-<!ENTITY Ctr_pw_set_predef	"Kalsiik ön-tanımlı">
+<!ENTITY Ctr_pw_set_predef	"Klasik ön-tanımlı">
 <!ENTITY Ctr_pw_set_preaus	"Firefox ön-tanımlı">
 <!ENTITY Ctr_pw_set_export	"Tercihleri dışa Aktar">
 <!ENTITY Ctr_pw_set_import	"Tercihleri içe Aktar">
@@ -264,6 +264,6 @@
 <!ENTITY Ctr_newversion		"Yeni versiyon?">
 
 <!ENTITY Ctr_addon-bar.accesskey	"A">
-<!ENTITY Ctr_openInPrivateWindow	"Open in a New Private Window">
+<!ENTITY Ctr_openInPrivateWindow	"Yeni Gizli Pencerede Aç">
 <!ENTITY Ctr_openInPrivateWindow.accesskey	"P">
-<!ENTITY appMenuGettingStarted.label	"Getting started">
+<!ENTITY appMenuGettingStarted.label	"Başlarken">
